crates/php-parser/tests/snapshots/integration__legacy_octal_invalid_digits.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 63
          },
          "span": {
            "start": 6,
            "end": 10
          }
        }
      },
      "span": {
        "start": 6,
        "end": 12
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 1
          },
          "span": {
            "start": 12,
            "end": 15
          }
        }
      },
      "span": {
        "start": 12,
        "end": 17
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 0
          },
          "span": {
            "start": 17,
            "end": 19
          }
        }
      },
      "span": {
        "start": 17,
        "end": 20
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 20
  }
}
